<resources>
    <string name="app_name">Marvel Universe</string>
    <string name="size_medium">/standard_medium.</string>
    <string name="title_activity_hero_information">HeroInformationActivity</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_information">InformationActivity</string>
    <string name="wait">Wait for it ...</string>
    <string name="message">No Description</string>
    <string name="zoom">Open image in fullscreen</string>
    <string name="add_message">Insert to favorite list.</string>
    <string name="delete_message">Delete from favorite list</string>
    <string name="dialog_message">Loading ...</string>
    <string name="dialog_title">Checking Network</string>
    <string name="action_search">Search</string>
    <string name="eleven_tab">\t\t\t\t\t</string>
    <string name="title_activity_comic">ComicActivity</string>
    <string name="isbn_message">No ISBN code</string>
    <string name="isbn">ISBN code:\t</string>
    <string name="start_year">Start Year: \t</string>
    <string name="end_year">\t - End Year: \t</string>
    <string name="creators">Creators</string>
    <string name="characters">Characters</string>
    <string name="images">Images</string>
    <string name="action_favorite">Favorite List</string>
    <string name="comics">Comics</string>
    <string name="series">Series</string>
    <string name="events">Events</string>
</resources>
