<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.framgia.marvel.ui.activity.InformationActivity"
    tools:showIn="@layout/activity_information">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="@dimen/dp_5"
        android:layout_marginLeft="@dimen/dp_5"
        android:layout_marginRight="@dimen/dp_5"
        android:layout_marginTop="@dimen/dp_25"
        android:orientation="vertical">

        <TextView
            android:id="@+id/text_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/text_margin"
            android:paddingBottom="@dimen/dp_12"
            android:textColor="@android:color/black"
            android:textSize="@dimen/dp_20"/>

        <ImageView
            android:id="@+id/empty_state"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="fitCenter"
            android:src="@drawable/nothing"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/text_infor_comic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/text_margin"
            android:padding="@dimen/dp_5"
            android:text="@string/comics"
            android:textColor="@android:color/black"
            android:textSize="@dimen/dp_20"
            />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycler_infor_comics"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/text_margin"
            />

        <TextView
            android:id="@+id/text_infor_series"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/text_margin"
            android:padding="@dimen/dp_5"
            android:text="@string/series"
            android:textColor="@android:color/black"
            android:textSize="@dimen/dp_20"
            />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycler_infor_series"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/text_margin"
            />

        <TextView
            android:id="@+id/text_infor_events"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/text_margin"
            android:padding="@dimen/dp_5"
            android:text="@string/events"
            android:textColor="@android:color/black"
            android:textSize="@dimen/dp_20"
            />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycler_infor_events"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/text_margin"
            />
    </LinearLayout>
</android.support.v4.widget.NestedScrollView>
