<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.framgia.marvel.ui.activity.ComicActivity"
    tools:showIn="@layout/activity_comic"
    android:background="@android:color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/text_comic_isbn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/text_margin"
            android:padding="@dimen/dp_5"
            android:textColor="@android:color/black"
            android:textSize="@dimen/dp_20"
            />

        <TextView
            android:id="@+id/text_comic_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/text_margin"
            android:padding="@dimen/dp_5"
            android:textColor="@android:color/black"
            android:textSize="@dimen/dp_20"
            />

        <ImageView
            android:id="@+id/empty_state"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="fitCenter"
            android:src="@drawable/nothing"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/text_comic_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/text_margin"
            android:padding="@dimen/dp_5"
            android:textColor="@android:color/black"
            android:textSize="@dimen/dp_20"
            />

        <TextView
            android:id="@+id/text_comic_creator"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/text_margin"
            android:padding="@dimen/dp_5"
            android:text="@string/creators"
            android:textColor="@android:color/black"
            android:textSize="@dimen/dp_20"
            />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycler_comic_creator"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/text_margin"
            />

        <TextView
            android:id="@+id/text_comic_character"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/text_margin"
            android:padding="@dimen/dp_5"
            android:text="@string/characters"
            android:textColor="@android:color/black"
            android:textSize="@dimen/dp_20"
            />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycler_comic_character"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/text_margin"
            />

        <TextView
            android:id="@+id/text_comic_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/text_margin"
            android:padding="@dimen/dp_5"
            android:text="@string/images"
            android:textColor="@android:color/black"
            android:textSize="@dimen/dp_20"
            />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycler_comic_image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/text_margin"
            />
    </LinearLayout>

</android.support.v4.widget.NestedScrollView>
